static/brainstorming.css
body {
    background-color: #D1D6DA;
    background-image: linear-gradient(#eef0f180 2px, transparent 2px),
    linear-gradient(90deg, #EEF0F180 2px, transparent 2px),
    linear-gradient(#DDE0E380 1px, transparent 1px),
    linear-gradient(90deg, #DDE0E380 1px, transparent 1px);
    background-size: 100px 100px, 100px 100px, 20px 20px, 20px 20px;
    background-position:-2px -2px, -2px -2px, -1px -1px, -1px -1px;
}

.gallery {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
    column-gap: 5em;
    row-gap: 5em;
    margin:5em;
}

.poster {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 2fr 6fr 3fr 3fr;
    grid-template-areas: "title   title"
                         "idea    problem"
                         "missing data"
                         "people  data";
    max-width:600px;
    min-width: 400px;
    column-gap: 10%;
    margin: 0px auto;
    padding: 0em 2.2em 1.5em 2.2em;
    box-shadow: 3px 5px 4px 2px rgb(158 158 158 / 50%);
    border-radius: .25em;
    background:white;
}
.box {
    position: absolute;
    top: 0; left: 0; bottom: 0; right: 0;
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
    font-size:.6em;
    font-family: cursive;
}
/*.box>div {background-color:blueviolet; display:block; width:100%; height:100%}*/
.container {
    position: relative;
    width:100%;
}
.container.title { padding-top: 2%; grid-area: title; }
.box.title {
    background-image: url(title.svg);
    padding: 13% 12% 15% 3%;
    margin-bottom: -10%;
    font-size: 18pt;
    text-align: center;
}
.container.idea { padding-top: 164%; grid-area: idea; }
.box.idea {
    background-image: url(idea.svg);
    padding: 55% 13% 30% 16%;
    transform: rotate(-10deg);
    margin: 0% -4% -22% -5%;
}
.container.arrowright { padding-top: 66%; grid-row: 2; grid-column: 1 / span 2; }
.box.arrowright {
    background-image: url(arrowright.svg);
    min-width: 1px;
    margin: 26% 32% 29% 40%;
}
.container.problem { padding-top: 164%; grid-area: problem; }
.box.problem {
    background-image: url(problem.svg);
    padding: 36% 47% 15% 32%;
    margin: 0% -41% 0% -25
}
.container.arrowdown { padding-top: 123%; grid-row: 2 / span 2; grid-column: 2; }
.box.arrowdown {
    background-image: url(arrowdown.svg);
    min-width: 1px;
    margin: 148% 26% 56% 39%;
}
.container.data { padding-top: 164%; grid-area: data; }
.box.data {
    background-image: url("data.svg");
    padding: 55% 10% 13% 24%;
    margin-left: -20%;
    transform: rotate(1deg);
}
.container.missing { padding-top: 82%; grid-area: missing; }
.box.missing {
    background-image: url("missing.svg");
    padding: 21% 10% 13% 15%;
    transform: rotate(-6deg);
}
.container.people { padding-top: 82%; grid-area: people;}
.box.people {
    background-image: url("people.svg");
    padding: 18% 17% 25% 14%;
    transform: rotate(-6deg);
    margin-right: -8%;
}
ul { margin: 0; padding-inline-start: 1em; list-style-type: none; }

footer {
    padding-top:2em;
    text-align: center;
    color: gray;
}

.landing {
    width: 40em;
    margin: 0px auto;
    padding: 2em 2.2em 1.5em 2.2em;
    box-shadow: 3px 5px 4px 2px rgb(158 158 158 / 50%);
    border-radius: .25em;
    background:white;
}

.landing h1 {
    display: block;
    text-align: center;
}


.landing input {
    display: block;
    margin: 1em auto;
    height: calc(1.5em + .75rem + 2px);
    padding: .375rem .75rem;
    font-size: 1rem;
    font-weight: 400;
    line-height: 1.5;
    background-color: #fff;
    background-clip: padding-box;
    border: 1px solid gray;
    border-radius: .25rem;
    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
}
.landing input[type=text] { min-width: 25em; }

.landing input:active,.landing input:focus, .landing input:hover{
    border: 1px solid #483d8b;
}

